fix: adjust no items text align

--- a/src/index.scss
+++ b/src/index.scss
@@ -103,10 +103,17 @@ $shadowDefault: 0px 5px 10px #00000050;
 
             .list-area,.item-area{
                 display: flex;
-                justify-content: flex-start;
                 align-items: flex-start;
                 margin-top: 25px;
                 flex-wrap: wrap;
+            }
+
+            .list-area {
+                justify-content: flex-start;
+            }
+
+            .item-area{
+                justify-content: center;
             }
 
             h4 {
